ola-parser/src/testdata/syntaxTests/nameAndTypeResolution/512_library_function_without_implementation_internal.sol
library L {
    fn f() internal;
}
// ----
// TypeError 9231: (16-38): Library functions must be implemented if declared.
